--- a/CleanConmute/RouteCell.xib
+++ b/CleanConmute/RouteCell.xib
@@ -139,6 +139,7 @@
                         </subviews>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="Enl-pg-tbj" secondAttribute="bottom" constant="16" id="Dqn-oT-T5R"/>
                     <constraint firstItem="Enl-pg-tbj" firstAttribute="leading" secondItem="K21-2J-c3C" secondAttribute="leading" constant="16" id="lkp-Kw-kPM"/>
