--- a/CleanConmute/Base.lproj/Main.storyboard
+++ b/CleanConmute/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14810.11" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.13"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,11 +17,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eGA-k9-8WO">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <subviews>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZXS-Is-cu1">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
                                     </mapView>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="aoT-ie-53W">
+                                        <rect key="frame" x="0.0" y="587" width="375" height="32"/>
+                                        <segments>
+                                            <segment title="Standard"/>
+                                            <segment title="Satellite"/>
+                                            <segment title="Hybrid"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="mapChangeType:" destination="9pv-A4-QxB" eventType="valueChanged" id="aUK-pZ-BWv"/>
+                                        </connections>
+                                    </segmentedControl>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -38,6 +47,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" image="map" selectedImage="map" id="acW-dT-cKf"/>
                     <connections>
+                        <outlet property="mapType" destination="aoT-ie-53W" id="Mn5-f8-Ypa"/>
                         <outlet property="mapView" destination="ZXS-Is-cu1" id="HTt-Fs-nxS"/>
                         <outlet property="sizer" destination="eGA-k9-8WO" id="xUi-XX-DRB"/>
                     </connections>
@@ -55,7 +65,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="65" translatesAutoresizingMaskIntoConstraints="NO" id="4ik-qn-L9z">
-                                <rect key="frame" x="16" y="36" width="343" height="531"/>
+                                <rect key="frame" x="16" y="16" width="343" height="534"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shD-m5-iBJ">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="21"/>
@@ -236,7 +246,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOg-bg-w2J">
-                                        <rect key="frame" x="0.0" y="417" width="343" height="19"/>
+                                        <rect key="frame" x="0.0" y="417" width="343" height="22"/>
                                         <attributedString key="attributedText">
                                             <fragment content="What type of car do you use?">
                                                 <attributes>
@@ -248,7 +258,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Jxr-NE-rAe">
-                                        <rect key="frame" x="0.0" y="501" width="343" height="31"/>
+                                        <rect key="frame" x="0.0" y="504" width="343" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="ATH-Fb-CKs"/>
                                         </constraints>
@@ -300,14 +310,47 @@
                     <view key="view" contentMode="scaleToFill" id="o8G-eb-nhA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pieplot" translatesAutoresizingMaskIntoConstraints="NO" id="Ug2-ra-d92">
+                                <rect key="frame" x="62.5" y="208.5" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="PJp-Zd-xV8"/>
+                                    <constraint firstAttribute="width" constant="250" id="btq-jo-hXu"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EJV-wE-dQH">
+                                <rect key="frame" x="69" y="185" width="58" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CDy-Br-1yN">
+                                <rect key="frame" x="210" y="169" width="58" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OH4-48-gKU">
+                                <rect key="frame" x="291" y="244" width="58" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vUQ-0n-mrr">
+                                <rect key="frame" x="158" y="446" width="58" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XHO-Yd-Vbc">
+                                <rect key="frame" x="16" y="325" width="58" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ug2-ra-d92" firstAttribute="centerX" secondItem="o8G-eb-nhA" secondAttribute="centerX" id="o9m-t5-4kj"/>
+                            <constraint firstItem="Ug2-ra-d92" firstAttribute="centerY" secondItem="o8G-eb-nhA" secondAttribute="centerY" id="ohu-Tn-PlN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="oOG-c0-TRu"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="chart" selectedImage="chart" id="Go1-4T-RUS"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KVp-Jv-WLk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1001" y="0.0"/>
+            <point key="canvasLocation" x="1000.8" y="-0.44977511244377816"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -330,13 +373,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="chart" width="60" height="60"/>
-        <image name="co2" width="60" height="60"/>
-        <image name="dollar" width="60" height="60"/>
-        <image name="flame" width="60" height="60"/>
-        <image name="gasmask" width="60" height="60"/>
-        <image name="map" width="60" height="60"/>
-        <image name="timer" width="60" height="60"/>
-        <image name="user" width="60" height="60"/>
+        <image name="chart" width="20" height="20"/>
+        <image name="co2" width="20" height="20"/>
+        <image name="dollar" width="20" height="20"/>
+        <image name="flame" width="20" height="20"/>
+        <image name="gasmask" width="20" height="20"/>
+        <image name="map" width="20" height="20"/>
+        <image name="pieplot" width="386" height="354.66665649414062"/>
+        <image name="timer" width="20" height="20"/>
+        <image name="user" width="20" height="20"/>
     </resources>
 </document>
