changed info icon and constraints

--- a/CleanConmute/Base.lproj/Main.storyboard
+++ b/CleanConmute/Base.lproj/Main.storyboard
@@ -287,6 +287,12 @@
                                         </connections>
                                     </segmentedControl>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="BOg-bg-w2J" firstAttribute="top" secondItem="JnK-1r-dYo" secondAttribute="bottom" constant="30" id="8XZ-C6-v3c"/>
+                                    <constraint firstItem="Jxr-NE-rAe" firstAttribute="top" secondItem="BOg-bg-w2J" secondAttribute="bottom" constant="30" id="HaO-5x-n70"/>
+                                    <constraint firstItem="shD-m5-iBJ" firstAttribute="top" secondItem="4ik-qn-L9z" secondAttribute="top" constant="30" id="rWR-Kv-kJG"/>
+                                    <constraint firstItem="JnK-1r-dYo" firstAttribute="top" secondItem="shD-m5-iBJ" secondAttribute="bottom" constant="30" id="ujG-NV-xhm"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -300,11 +306,13 @@
                     <tabBarItem key="tabBarItem" title="" image="user" selectedImage="user" id="cPa-gy-q4n"/>
                     <connections>
                         <outlet property="carChoiceSelector" destination="Jxr-NE-rAe" id="rsD-RY-4Yr"/>
+                        <outlet property="cartypelabel" destination="BOg-bg-w2J" id="7zW-TC-Dqb"/>
                         <outlet property="icon1" destination="yQG-ha-Hvf" id="Agc-OQ-Ryz"/>
                         <outlet property="icon2" destination="u8O-c2-cWe" id="GNV-Ez-E73"/>
                         <outlet property="icon3" destination="kfw-Tt-rr3" id="Fk1-tE-eO9"/>
                         <outlet property="icon4" destination="0ma-0B-jy3" id="fl0-bA-rRr"/>
                         <outlet property="icon5" destination="68J-Df-3TA" id="uZe-qT-VFp"/>
+                        <outlet property="mattermostlabel" destination="shD-m5-iBJ" id="gGG-7B-13A"/>
                         <outlet property="slider1" destination="Bqm-dz-8mw" id="wSw-dO-bqo"/>
                         <outlet property="slider2" destination="DOM-5g-6a4" id="diu-Jf-W1I"/>
                         <outlet property="slider3" destination="4BJ-Mp-aiQ" id="xje-Cb-x4k"/>
@@ -380,7 +388,7 @@
                             <constraint firstItem="L10-gw-CfA" firstAttribute="top" secondItem="gax-8C-XxK" secondAttribute="bottom" constant="8" symbolic="YES" id="hHZ-FV-jZI"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="info.circle" catalog="system" id="NQe-nA-V3e"/>
+                    <tabBarItem key="tabBarItem" title="" image="info" catalog="system" selectedImage="info" id="NQe-nA-V3e"/>
                     <connections>
                         <outlet property="scrollInfo" destination="g3N-gT-Tbt" id="rj7-Vg-Jpq"/>
                     </connections>
@@ -395,7 +403,7 @@
         <image name="co2" width="20" height="20"/>
         <image name="dollar" width="20" height="20"/>
         <image name="flame" width="20" height="20"/>
-        <image name="info.circle" catalog="system" width="64" height="60"/>
+        <image name="info" catalog="system" width="46" height="64"/>
         <image name="map" width="20" height="20"/>
         <image name="timer" width="20" height="20"/>
         <image name="toxic" width="20" height="20"/>
